# signalbash

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_mac.sh  build_win.bat
packaging/: distribution.xml.template  installer.iss  linux.md
packaging/resources/: LICENSE
source/: CMakeLists.txt  CurrentElapsedTimeProgress.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RestRequest.h
